apps/backup-rest-server/k8s.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rest-server
  namespace: backup
  labels:
    app.kubernetes.io/name: rest-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rest-server
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
